feat: test updates